tests/fixtures/invalid/oct_set.py
# Cannot call oct() with Set[int]
x = oct({1, 2, 3})
